--- a/package.json
+++ b/package.json
@@ -20,8 +20,17 @@
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
     "@capacitor/core": "2.4.7",
+    "@ionic-native/core": "^5.31.1",
+    "@ionic-native/splash-screen": "^5.31.1",
+    "@ionic-native/status-bar": "^5.31.1",
     "@ionic/angular": "^5.5.2",
+    "@ionic/storage": "^2.3.1",
+    "bootstrap": "^4.6.0",
+    "cordova-plugin-splashscreen": "^6.0.0",
+    "cordova-plugin-statusbar": "^2.4.3",
+    "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
+    "stream": "0.0.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
@@ -33,6 +42,7 @@
     "@angular/language-service": "~11.2.0",
     "@capacitor/cli": "2.4.7",
     "@ionic/angular-toolkit": "^3.1.0",
+    "@ionic/lab": "3.2.10",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
